Fixed the scrollbar issue in the viewer on Quantum Edge

--- a/public/css/gui.css
+++ b/public/css/gui.css
@@ -618,3 +618,11 @@ body.dark .left-icon{
     width: 20%;
   }
 }
+
+.ScrollBar:last-child:hover {
+  cursor: grab;
+}
+
+.ScrollBar:last-child:active {
+  cursor: grabbing;
+}
